<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/dashboard"
        app:cnb_iconColor="@color/home"/>

    <item
        android:id="@+id/heartbeat"
        android:icon="@drawable/heartbeats"
        android:title="@string/heart_beat"
        app:cnb_iconColor="@color/activity"/>



    <item
        android:id="@+id/sport"
        android:icon="@drawable/footing"
        android:title="@string/step"
        app:cnb_iconColor="@color/favorites" />



    <item
        android:id="@+id/drug"
        android:icon="@drawable/meds"
        android:title="@string/medicine"
        app:cnb_iconColor="@color/drugs" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/setting"
        app:cnb_iconColor="@color/settings" />

    <item
        android:id="@+id/about"
        android:icon="@drawable/about"
        android:title="@string/about"
        app:cnb_iconColor="@color/about" />





</menu>