<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StepSportActivity">
    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/about"
        android:orientation="horizontal"
        tools:background="@color/about"
        tools:context=".AboutActivity">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <com.ismaeldivita.chipnavigation.ChipNavigationBar
                android:id="@+id/bottom_menu"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:elevation="16dp"
                app:cnb_minExpandedWidth="150dp"
                app:cnb_addTopInset="true"
                app:cnb_addLeftInset="true"
                app:cnb_menuResource="@menu/main"
                app:cnb_orientationMode="vertical" />

            <ImageView
                android:id="@+id/expand_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:tint="#696969"
                android:padding="8dp"
                android:src="@drawable/ic_menu" />

        </LinearLayout>



        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/about"
            android:orientation="vertical"
            tools:background="@color/about"
            tools:context=".SettingActivity">


            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:fitsSystemWindows="true"
                android:textColor="@color/white"
                android:textSize="34sp"
                android:text="@string/about" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"

                android:background="@color/white" />


            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:fitsSystemWindows="true"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:text="HeartM 3.0 " />


            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xlarge"
                android:layout_marginStart="24dp"
                android:fitsSystemWindows="true"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/developed_to" />


            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="@dimen/spacing_small"
                android:fitsSystemWindows="true"
                android:textColor="@color/white"
                android:drawableLeft="@drawable/correct"
                android:drawablePadding="@dimen/spacing_small"
                android:textSize="12sp"
                android:text="@string/record_health" />


            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:fitsSystemWindows="true"
                android:textColor="@color/white"
                android:drawableLeft="@drawable/correct"
                android:drawablePadding="@dimen/spacing_small"
                android:textSize="12sp"
                android:text="@string/control_medicine" />


            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:fitsSystemWindows="true"
                android:textColor="@color/white"
                android:drawableLeft="@drawable/correct"
                android:drawablePadding="@dimen/spacing_small"
                android:textSize="12sp"
                android:text="@string/doing_sport" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xlarge"
                android:layout_marginStart="24dp"
                android:fitsSystemWindows="true"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/powered_and_supported" />








        </LinearLayout>





    </LinearLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>