<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StepSportActivity">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/activity"
        android:orientation="horizontal"
        tools:background="@color/activity"
        tools:context=".HeartBeatActivity">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <com.ismaeldivita.chipnavigation.ChipNavigationBar
                android:id="@+id/bottom_menu"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:elevation="16dp"
                app:cnb_minExpandedWidth="150dp"
                app:cnb_addTopInset="true"
                app:cnb_addLeftInset="true"
                app:cnb_menuResource="@menu/main"
                app:cnb_orientationMode="vertical" />

            <ImageView
                android:id="@+id/expand_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:tint="#696969"
                android:padding="8dp"
                android:src="@drawable/ic_menu" />

        </LinearLayout>


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/activity"
            android:orientation="vertical"
            tools:background="@color/activity"
            tools:context=".HeartBeatActivity">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:fitsSystemWindows="true"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:text="Riwayat Detak Jantung " />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"

                android:background="@color/white" />

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <ImageView
                    android:id="@+id/imgVFilter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_regular"
                    android:layout_marginLeft="@dimen/spacing_xsmall"
                    android:tint="@color/main_orange_light_color"
                    app:srcCompat="@drawable/filter" />


                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chpgrpStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:layout_marginTop="@dimen/spacing_xsmall"
                android:layout_marginBottom="@dimen/spacing_small"
                android:layout_marginLeft="@dimen/spacing_middle"
                app:chipSpacing="@dimen/spacing_small"
                app:singleSelection="true"

                >

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipDay"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue_btn_bg_color"
                    app:chipBackgroundColor="@color/chip_bg_states"

                    android:text="@string/per_day"/>


                <com.google.android.material.chip.Chip
                    android:id="@+id/chipWeek"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue_btn_bg_color"
                    app:chipBackgroundColor="@color/chip_bg_states"

                    android:text="@string/week"/>


                <com.google.android.material.chip.Chip
                    android:id="@+id/chipMonth"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue_btn_bg_color"
                    app:chipBackgroundColor="@color/chip_bg_states"

                    android:text="@string/month"/>


            </com.google.android.material.chip.ChipGroup>

            </LinearLayout>

            <com.gigamole.navigationtabstrip.NavigationTabStrip
                android:id="@+id/nts_center"
                android:layout_width="match_parent"
                android:layout_height="42dp"

                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/spacing_medium"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:layout_marginRight="@dimen/spacing_medium"
                android:layout_marginStart="@dimen/spacing_medium"
                app:nts_active_color="#fff"
                app:nts_color="#FFF090"
                app:nts_corners_radius="3.5dp"
                app:nts_factor="0.8"
                app:nts_gravity="bottom"
                app:nts_inactive_color="#81ffffff"
                app:nts_titles="@array/tab_titles"
                app:nts_type="line"
                app:nts_typeface="fonts/moon.otf"
                app:nts_weight="2dp"/>

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/chart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/spacing_medium"
                android:visibility="gone"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"/>

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animationView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:lottie_rawRes="@raw/no_data_animation"
                app:lottie_autoPlay="true"
                android:visibility="gone"
                app:lottie_loop="true"/>


        </LinearLayout>




    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_gravity="bottom|start"
        android:layout_margin="@dimen/fab_margin"
        android:background="@color/white"
        app:srcCompat="@android:drawable/ic_menu_share"
        app:backgroundTint="@color/settings"

        />



</androidx.coordinatorlayout.widget.CoordinatorLayout>